# data_observability_platform

./: .env.example  .gitignore  Dockerfile.sla_monitor  Makefile  README.md  docker-compose.yml  pyproject.toml  sla_config.yml
.kiro/specs/data-observability-platform/: .config.kiro  design.md  requirements.md  tasks.md
contracts/: orders.yml
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: check_untested_models.sql
dbt_project/models/: sources.yml
dbt_project/models/marts/: marts_orders.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_orders.sql
docs/: changelog.md
scripts/: check_marquez.py  init_db.sql  validate_env.py
src/: __init__.py  alert_manager.py  anomaly_detector.py  config.py  contract_enforcer.py  db_migrations.py  lineage_tracker.py  main.py  models.py  run_pipeline.py  sla_api.py  sla_monitor.py
tests/property/: test_alert_retry.py  test_alert_suppression.py  test_anomaly_threshold.py  test_contract_violations.py  test_contract_yaml_roundtrip.py  test_freshness_monotonicity.py  test_lineage_roundtrip.py
tests/unit/: test_config.py  test_db_migrations.py
