[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-observability-platform"
version = "0.1.0"
description = "End-to-end data observability platform for dbt-based pipelines"
requires-python = ">=3.11"
dependencies = [
    "dbt-core>=1.7",
    "dbt-postgres>=1.7",
    "openlineage-dbt>=1.9",
    "elementary-data>=0.14",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
